--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,9 @@ jobs:
         shell: bash
         run: |
           python3 -m pip install "ansible>=10,<11"
-          python3 -m pip install paramiko
-          python3 -m pip install ansible-pylibssh
+          python3 -m pip install  paramiko
+          python -m pip install --upgrade pip certifi
+
 
 
 
