--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,3 +1,5 @@
+---
+
 all:
   children:
     xr:
@@ -7,8 +9,16 @@ all:
         xr2:
           ansible_host: 10.62.189.44
       vars:
-        ansible_user: "{{ lookup('env','XR_USERNAME') }}"
+        ansible_connection: ansible.netcommon.network_cli
+        ansible_network_os: cisco.iosxr.iosxr
+        ansible_ssh_type: paramiko
+        ansible_user: "{{ lookup('env','XR_USERNAME') }}" 
         ansible_password: "{{ lookup('env','XR_PASSWORD') }}"
-        ansible_network_os: iosxr
-        ansible_connection: network_cli
+        ansible_port: 22
+        ansible_command_timeout: 120
+        ansible_connect_timeout: 30
+        ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+
+
+
 
