Runner now uses Python 3.11

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,10 @@ jobs:
       - name: Install Ansible + pylibssh
         shell: bash
         run: |
-          python3 -m pip install "ansible>=10,<11"
-          python3 -m pip install ansible-pylibssh
+          python3.11 -m pip install --upgrade pip
+          python3.11 -m pip install "ansible>=10,<11"
+          python3.11 -m pip install ansible-pylibssh
+
 
       - name: Install IOS-XR collection
         shell: bash
