--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,18 @@ jobs:
           submodules: false 
           clean: true 
           fetch-depth: 0
+          persist-credentials: false 
+          lfs: false 
+          ref: ${{ github.sha }}
+          clean-exclude: "" # GitHub cache bypass
+
+      - name: Remove any leftover submodule metadata
+        run: |
+          rm -rf .git/modules || true
+          rm -rf .git/modules || true
+          rm -f .git/config.worktree || true
+          git config --unset-all submodule || true
+
 
 
       - name: Prepare Python + CA bundle (macOS runner)
