--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           persist-credentials: false 
           lfs: false 
           ref: ${{ github.sha }}
-          clean-exclude: "" # GitHub cache bypass
+        
 
       - name: Remove any leftover submodule metadata
         run: |
@@ -73,5 +73,6 @@ jobs:
 
 
 
+# trigger
 # trigger
 # trigger
