--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: [self-hosted, macOS, X64]
+    runs-on: self-hosted
 
     steps:
       - name: Checkout
@@ -67,5 +67,6 @@ jobs:
         run: |
           echo "XR_USERNAME is: $XR_USERNAME"
           ansible-playbook -i inventory/hosts.yml  playbooks/isis.yml -vv
+# trigger
 # trigger
 # trigger
