--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory/hosts.ini
-inventory_enabled = ini,yaml, host_list, script, auto
+inventory = inventory/hosts.yml
+inventory_enabled = yaml, host_list, script, auto
 host_key_checking = False
 
