--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-# force trigger
-
 name: IOS-XR GitOps Demo
 
 on:
@@ -22,13 +20,13 @@ jobs:
           lfs: false
           ref: ${{ github.sha }}
 
-      - name: Remove any leftover submodule metadata
+      - name: Remove leftover submodule metadata
         run: |
           rm -rf .git/modules || true
           rm -f .git/config.worktree || true
           git config --unset-all submodule || true
 
-      - name: Prepare Python + CA bundle (macOS runner)
+      - name: Prepare Python + CA bundle
         shell: bash
         run: |
           python3 --version
@@ -37,17 +35,23 @@ jobs:
           echo "SSL_CERT_FILE=$CACERT" >> $GITHUB_ENV
           echo "REQUESTS_CA_BUNDLE=$CACERT" >> $GITHUB_ENV
 
-      - name: Install Ansible + pylibssh
+      - name: Install system dependencies for pylibssh
         shell: bash
         run: |
-          python3.11 -m pip install --upgrade pip
-          python3.11 -m pip install "ansible>=10,<11"
-          python3.11 -m pip install ansible-pylibssh
+          brew update
+          brew install libssh openssl pkg-config
 
-      - name: Force Ansible to use Python 3.11
+      - name: Install Ansible + pylibssh (Python 3.13)
         shell: bash
         run: |
-          echo "ANSIBLE_PYTHON_INTERPRETER=$(which python3.11)" >> $GITHUB_ENV
+          python3 -m pip install --upgrade pip
+          python3 -m pip install "ansible>=10,<11"
+          python3 -m pip install ansible-pylibssh
+
+      - name: Force Ansible to use Python 3.13
+        shell: bash
+        run: |
+          echo "ANSIBLE_PYTHON_INTERPRETER=$(which python3)" >> $GITHUB_ENV
 
       - name: Install IOS-XR collection
         shell: bash
@@ -69,7 +73,5 @@ jobs:
           ANSIBLE_PERSISTENT_CONNECT_TIMEOUT: "30"
           ANSIBLE_PERSISTENT_COMMAND_TIMEOUT: "120"
         run: |
-          echo "XR_USERNAME is: $XR_USERNAME"
           ansible-playbook -i inventory/hosts.yml playbooks/isis.yml -vv
 
-# trigger
