--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: IOS-XR GitOps Demo
 
 on:
   push:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -9,75 +10,50 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          path: .
-          submodules: false
-          clean: true
-          fetch-depth: 0
-          persist-credentials: false
-          lfs: false
-          ref: ${{ github.sha }}
+          submodules: recursive
 
-      - name: Remove leftover submodule metadata
+      - name: Clean broken submodule metadata
         run: |
           rm -rf .git/modules || true
           rm -f .git/config.worktree || true
           git config --unset-all submodule || true
 
-      - name: Prepare Python + CA bundle
-        shell: bash
+      # -------------------------------
+      # 1) Install Python 3.11 (isolated)
+      # -------------------------------
+      - name: Install Python 3.11
         run: |
-          python3 --version
-          python3 -m pip install --upgrade pip certifi
-          CACERT=$(python3 -c "import certifi; print(certifi.where())")
-          echo "SSL_CERT_FILE=$CACERT" >> $GITHUB_ENV
-          echo "REQUESTS_CA_BUNDLE=$CACERT" >> $GITHUB_ENV
+          brew install python@3.11
+          echo 'export PATH="/opt/homebrew/opt/python@3.11/bin:$PATH"' >> $GITHUB_ENV
 
-      - name: Install system dependencies for pylibssh
-        shell: bash
+      # -------------------------------
+      # 2) Create isolated virtualenv
+      # -------------------------------
+      - name: Create virtualenv for Ansible
         run: |
-          brew update
-          brew install libssh openssl pkg-config
-
-      - name: Install Ansible + pylibssh (Python 3.13)
-        shell: bash
-        run: |
+          python3.11 -m venv ansible-env
+          source ansible-env/bin/activate
           python3 -m pip install --upgrade pip
           python3 -m pip install "ansible>=10,<11"
           python3 -m pip install ansible-pylibssh
+          echo "ANSIBLE_PYTHON_INTERPRETER=$(pwd)/ansible-env/bin/python3" >> $GITHUB_ENV
 
-      - name: Force-install pylibssh into Ansible's Python
-        shell: bash
-        run: |
-           echo "ANSIBLE_PYTHON_INTERPRETER=$(which python3)" >> $GITHUB_ENV
-
-
-      - name: Force Ansible to use Python 3.13
-        shell: bash
-        run: |
-          echo "ANSIBLE_PYTHON_INTERPRETER=$(which python3)" >> $GITHUB_ENV
-
+      # -------------------------------
+      # 3) Install IOS-XR collection
+      # -------------------------------
       - name: Install IOS-XR collection
-        shell: bash
-        env:
-          SSL_CERT_FILE: ${{ env.SSL_CERT_FILE }}
-          REQUESTS_CA_BUNDLE: ${{ env.REQUESTS_CA_BUNDLE }}
         run: |
+          source ansible-env/bin/activate
           ansible-galaxy collection install cisco.iosxr --force
 
+      # -------------------------------
+      # 4) Run the playbook
+      # -------------------------------
       - name: Run playbook
-        shell: bash
-        env:
-          XR_USERNAME: "ansible"
-          XR_PASSWORD: "ansible"
-          SSL_CERT_FILE: ${{ env.SSL_CERT_FILE }}
-          REQUESTS_CA_BUNDLE: ${{ env.REQUESTS_CA_BUNDLE }}
-          ANSIBLE_PYTHON_INTERPRETER: ${{ env.ANSIBLE_PYTHON_INTERPRETER }}
-          ANSIBLE_HOST_KEY_CHECKING: "False"
-          ANSIBLE_PERSISTENT_CONNECT_TIMEOUT: "30"
-          ANSIBLE_PERSISTENT_COMMAND_TIMEOUT: "120"
         run: |
+          source ansible-env/bin/activate
           ansible-playbook -i inventory/hosts.yml playbooks/isis.yml -vv
 
