--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -18,7 +18,10 @@ all:
         ansible_command_timeout: 120
         ansible_connect_timeout: 30
         ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
-
-
+        ansible_persistent_connect_timeout: 0
+        ansible_persistent_command_timeout: 0
+        ansible_persistent_log_messages: false
+        ansible_ssh_transfer_method: scp
+        ansible_ssh_extra_args: "-o ServerAliveInterval=30 -o ServerAliveCountMax=5"
 
 
