Fix XR SSH transport

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -12,6 +12,8 @@ all:
         ansible_connection: ansible.netcommon.network_cli
         ansible_network_os: cisco.iosxr.iosxr
         ansible_ssh_type: paramiko
+        ansible_network_cli_ssh_type: paramiko
+        ansible_network_cli_ssh_transport: cli
         ansible_user: "{{ lookup('env','XR_USERNAME') }}" 
         ansible_password: "{{ lookup('env','XR_PASSWORD') }}"
         ansible_port: 22
