--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -8,22 +8,25 @@ all:
           ansible_host: 10.62.189.43
         xr2:
           ansible_host: 10.62.189.44
+
       vars:
         ansible_connection: ansible.netcommon.network_cli
         ansible_network_os: cisco.iosxr.iosxr
-        ansible_ssh_type: paramiko
+
+        # XR için KRİTİK iki satır:
         ansible_network_cli_ssh_type: paramiko
         ansible_network_cli_ssh_transport: cli
-        ansible_user: "{{ lookup('env','XR_USERNAME') }}" 
+
+        ansible_user: "{{ lookup('env','XR_USERNAME') }}"
         ansible_password: "{{ lookup('env','XR_PASSWORD') }}"
         ansible_port: 22
-        ansible_command_timeout: 120
-        ansible_connect_timeout: 30
-        ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+
+        # XR persistent session desteklemez → kapatıyoruz
         ansible_persistent_connect_timeout: 0
         ansible_persistent_command_timeout: 0
         ansible_persistent_log_messages: false
+
+        ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
         ansible_ssh_transfer_method: scp
         ansible_ssh_extra_args: "-o ServerAliveInterval=30 -o ServerAliveCountMax=5"
-
 
