--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -8,8 +8,8 @@ xr:
       ansible_host: 10.62.189.44
 
   vars:
-    ansible_connection: network_cli
-    ansible_network_os: iosxr
+    ansible_connection: ansible.netcommon.network_cli
+    ansible_network_os: cisco.iosxr.iosxr
 
     ansible_user: "{{ lookup('env','XR_USERNAME') }}"
     ansible_password: "{{ lookup('env','XR_PASSWORD') }}"
