--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Install Ansible
         run: |
-          sudo apt update
-          sudo apt install -y python3-pip sshpass
+          apt update
+          apt install -y python3-pip sshpass
           pip3 install ansible paramiko
 
       - name: Deploy to XR
