--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -11,8 +11,8 @@ xr:
     ansible_connection: ansible.netcommon.network_cli
     ansible_network_os: cisco.iosxr.iosxr
 
-    ansible_user: "{{ lookup('env','XR_USERNAME') }}"
-    ansible_password: "{{ lookup('env','XR_PASSWORD') }}"
+    ansible_user: "ansible"
+    ansible_password: "ansible"
     ansible_port: 22
 
     ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
